fix brand icons on small devices

--- a/frontend_react/src/container/Testimonial/Testimonial.scss
+++ b/frontend_react/src/container/Testimonial/Testimonial.scss
@@ -151,7 +151,7 @@
     }
 
     @media screen and (max-width: 450px) {
-      width: 120px;
+      width: 50px;
       margin: 1rem;
     }
   }
